@@ -36,6 +36,7 @@
 #define __NFACEPAIRING_H
 #endif
 
+#include <iostream>
 #include <list>
 #include "utilities/nbooleans.h"
 #include "utilities/nthread.h"
@@ -328,6 +329,58 @@ class NFacePairing : public NThread {
          */
         std::string toTextRep() const;
 
+        /**
+         * Writes the graph corresponding to this face pairing in
+         * the Graphviz DOT language.  Every vertex of this graph
+         * represents a tetrahedron, and every edge represents a pair of
+         * tetrahedron faces that are joined together.  Note that for a
+         * closed triangulation this graph will be entirely 4-valent;
+         * for triangulations with boundary faces, some graph vertices
+         * will have degree three or less.
+         *
+         * The graph can either be written as a complete DOT graph, or
+         * as a clustered subgraph within some larger DOT graph
+         * (according to whether the argument \a subgraph is passed as
+         * \c false or \c true).
+         *
+         * If a complete DOT graph is being written, the output may be
+         * used as a standalone DOT file ready for use with Graphviz.
+         *
+         * If a subgraph is being written, the output will contain a
+         * single \c subgraph section that should be inserted into some
+         * larger DOT file.  Note that the output generated by
+         * writeDotHeader(), followed by one or more subgraphs and then
+         * a closing curly brace will suffice.  The subgraph name will
+         * begin with the string \c cluster_, so that Graphviz identifies
+         * it as a cluster accordingly.
+         *
+         * The argument \a prefix will be prepended to the name of each
+         * graph vertex, and will also be used in the name of the graph
+         * or subgraph.  Using unique prefixes becomes important if you
+         * are calling writeDot() several times to generate several
+         * subgraphs for use in a single DOT file.  If the \a prefix
+         * argument is null or empty then a default prefix will be used.
+         *
+         * Note that this routine generates undirected graphs, not
+         * directed graphs.  The final DOT file should be used with
+         * either the \a neato or \a fdp programs shipped with Graphviz.
+         *
+         * \ifacespython The \a out argument is not present; instead
+         * standard output is assumed.
+         *
+         * @param out the output stream to which to write.
+         * @param prefix a string to prepend to the name of each graph
+         * vertex, and to include in the graph or subgraph name; see
+         * above for details.
+         * @param subgraph \c false if a complete standalone DOT graph
+         * should be output, or \c true if a clustered subgraph should
+         * be output for use in some larger DOT file.
+         *
+         * @see http://www.graphviz.org/
+         */
+        void writeDot(std::ostream& out, const char* prefix = 0,
+            bool subgraph = false) const;
+
         /*@}*/
         /**
          * (end: Input and Output)
@@ -350,6 +403,43 @@ class NFacePairing : public NThread {
          * \c null if the given text-based representation was invalid.
          */
         static NFacePairing* fromTextRep(const std::string& rep);
+
+        /**
+         * Writes header information for a Graphviz DOT file that will
+         * describe the graphs for one or more face pairings.  See
+         * the writeDot() documentation for further information on such
+         * graphs.
+         *
+         * The output will be in the Graphviz DOT language, and will
+         * include appropriate display settings for graphs, edges and
+         * nodes.  The opening brace for a \c graph section of the DOT
+         * file is included.
+         *
+         * This routine may be used with writeDot() to generate a single
+         * DOT file containing the graphs for several different face
+         * pairings.  A complete DOT file can be produced by calling
+         * this routine, then calling writeDot() in subgraph mode for
+         * each face pairing, then outputting a final closing curly brace.
+         *
+         * Note that if you require a DOT file containing the graph for
+         * only a single face pairing, this routine is unnecessary; you
+         * may simply call writeDot() in full graph mode instead.
+         *
+         * This routine is suitable for generating undirected graphs, not
+         * directed graphs.  The final DOT file should be used with
+         * either the \a neato or \a fdp programs shipped with Graphviz.
+         *
+         * \ifacespython The \a out argument is not present; instead
+         * standard output is assumed.
+         *
+         * @param out the output stream to which to write.
+         * @param graphName the name of the graph in the DOT file.
+         * If this is null or empty then a default graph name will be used.
+         *
+         * @see http://www.graphviz.org/
+         */
+        static void writeDotHeader(std::ostream& out,
+            const char* graphName = 0);
 
         /**
          * \name Subgraph Queries
